--- a/catalog.html
+++ b/catalog.html
@@ -9,7 +9,7 @@
 <body>
   <header>
     <a href="index.html">
-      <img src="img/svg-gllacy/logo.svg" width="156" height="67" alt="Логотип магазина Glacy">
+      <img src="img/svg-gllacy/logo.svg" width="154" height="64" alt="Логотип магазина Glacy">
     </a>
     <nav>
       <ul>
@@ -54,7 +54,7 @@
       <ul>
         <li>
           <a href="catalog-item.html">
-           <img src="img/ice-cream/1.png" width="267" height="267" alt="Мороженное">
+           <img src="img/ice-cream/orangejam.png" width="267" height="267" alt="Мороженное">
           </a>
           <p>
             <a href="catalog-item.html">
@@ -68,7 +68,7 @@
         </li>
         <li>
           <a href="catalog-item.html">
-            <img src="img/ice-cream/2.png" width="267" height="267" alt="Мороженное">
+            <img src="img/ice-cream/coffechoc.png" width="267" height="267" alt="Мороженное">
           <p>
             <a href="catalog-item.html">
               Сливочно-кофейное с кусочками
@@ -81,7 +81,7 @@
         </li>
         <li>
           <a href="catalog-item.html">
-            <img src="img/ice-cream/3.png" width="267" height="267" alt="Мороженное">
+            <img src="img/ice-cream/whitechoc.png" width="267" height="267" alt="Мороженное">
           </a>
           <p>
             <a href="catalog-item.html">
@@ -95,7 +95,7 @@
         </li>
         <li>
           <a href="catalog-item.html">
-            <img src="img/ice-cream/4.png" width="267" height="267" alt="Мороженное">
+            <img src="img/ice-cream/carcream.png" width="267" height="267" alt="Мороженное">
           </a>
           <p>
             <a href="catalog-item.html">
@@ -109,7 +109,7 @@
         </li>
         <li>
           <a href="catalog-item.html">
-           <img src="img/ice-cream/2 ряд/1.png" width="267" height="267" alt="Мороженное">
+           <img src="img/ice-cream/2line/brusjam.png" width="267" height="267" alt="Мороженное">
           </a>
           <p>
             <a href="catalog-item.html">
@@ -123,7 +123,7 @@
         </li>
         <li>
           <a href="catalog-item.html">
-           <img src="img/ice-cream/2 ряд/2.png" width="267" height="267" alt="Мороженное">
+           <img src="img/ice-cream/2line/blackberry.png" width="267" height="267" alt="Мороженное">
           </a>
           <p>
             <a href="catalog-item.html">
@@ -137,7 +137,7 @@
         </li>
         <li>
           <a href="catalog-item.html">
-          <img src="img/ice-cream/2 ряд/3.png" width="267" height="267" alt="Мороженное">
+          <img src="img/ice-cream/2line/lemonrain.png" width="267" height="267" alt="Мороженное">
           </a>
           <p>
             <a href="catalog-item.html">
@@ -151,7 +151,7 @@
         </li>
         <li>
           <a href="catalog-item.html">
-           <img src="img/ice-cream/2 ряд/4.png" width="267" height="267" alt="Мороженное">
+           <img src="img/ice-cream/2line/chococream.png" width="267" height="267" alt="Мороженное">
           </a>
           <p>
             <a href="catalog-item.html">
@@ -165,7 +165,7 @@
         </li>
         <li>
           <a href="catalog-item.html">
-           <img src="img/ice-cream/3 ряд/1.png" width="267" height="267" alt="Мороженное">
+           <img src="img/ice-cream/3line/chocvanil.png" width="267" height="267" alt="Мороженное">
           </a>
           <p>
             <a href="catalog-item.html">
@@ -179,7 +179,7 @@
         </li>
         <li>
           <a href="catalog-item.html">
-           <img src="img/ice-cream/3 ряд/2.png" width="267" height="267" alt="Мороженное">
+           <img src="img/ice-cream/3line/mentolsyr.png" width="267" height="267" alt="Мороженное">
           </a>
           <p>
             <a href="catalog-item.html">
@@ -193,7 +193,7 @@
         </li>
         <li>
           <a href="catalog-item.html">
-           <img src="img/ice-cream/3 ряд/3.png" width="267" height="267" alt="Мороженное">
+           <img src="img/ice-cream/3line/blackchoc.png" width="267" height="267" alt="Мороженное">
           </a>
           <p>
             <a href="catalog-item.html">
@@ -207,7 +207,7 @@
         </li>
         <li>
           <a href="catalog-item.html">
-         <img src="img/ice-cream/3 ряд/4.png" width="267" height="267" alt="Мороженное">
+         <img src="img/ice-cream/3line/slivmint.png" width="267" height="267" alt="Мороженное">
           </a>
           <p>
             <a href="catalog-item.html">
