--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
   <header>
     <a href="#">
-      <img src="img/svg-gllacy/logo.svg" width="156" height="67" alt="Логотип магазина Glacy">
+      <img src="img/svg-gllacy/logo.svg" width="154" height="64" alt="Логотип магазина Glacy">
     </a>
     <nav>
       <ul>
@@ -32,18 +32,18 @@
       </p>
       <ul>
         <li>
-          <img src="img/ice-cream/Слайды/Мороженко 1.png" width="640" height="585" alt="Слайд 1">
+          <img src="img/ice-cream/slides/malinslide.png" width="1045" height="881" alt="Слайд 1">
           <p>Крем-брюле и пломбир
             с малиновым джемом</p>
           <a href="#">Давайте оба!</a>
         </li>
         <li>
-           <img src="img/ice-cream/Слайды/Мороженко 2.png" width="640" height="585" alt="Слайд 2">
+           <img src="img/ice-cream/slides/chocslide.png" width="1045" height="881" alt="Слайд 2">
           <p>Шоколадный пломбир и лимонный сорбет</p>
           <a href="#">Давайте оба!</a>
         </li>
         <li>
-           <img src="img/ice-cream/Слайды/Мороженко 3.png" width="640" height="585" alt="Слайд 3">
+           <img src="img/ice-cream/slides/pomadeslide.png" width="1045" height="881" alt="Слайд 3">
           <p>пломбир с помадкой и клубничный щербет</p>
           <a href="#">Давайте оба!</a>
         </li>
@@ -68,7 +68,7 @@
       <ul>
         <li>
           <a href="catalog-item.html">
-             <img src="img/ice-cream/1.png" width="267" height="267" alt="Мороженное">
+             <img src="img/ice-cream/orangejam.png" width="267" height="267" alt="Мороженное">
           </a>
           <p>
             <a href="catalog-item.html">
@@ -82,7 +82,7 @@
         </li>
         <li>
           <a href="catalog-item.html">
-            <img src="img/ice-cream/2.png" width="267" height="267" alt="Мороженное">
+            <img src="img/ice-cream/coffechoc.png" width="267" height="267" alt="Мороженное">
           </a>
           <p>
             <a href="catalog-item.html">
@@ -96,7 +96,7 @@
         </li>
         <li>
           <a href="catalog-item.html">
-            <img src="img/ice-cream/3.png" width="267" height="267" alt="Мороженное">
+            <img src="img/ice-cream/whitechoc.png" width="267" height="267" alt="Мороженное">
           </a>
           <p>
             <a href="catalog-item.html">
@@ -110,7 +110,7 @@
         </li>
         <li>
           <a href="catalog-item.html">
-            <img src="img/ice-cream/4.png" width="267" height="267" alt="Мороженное">
+            <img src="img/ice-cream/carcream.png" width="267" height="267" alt="Мороженное">
           </a>
           <p>
             <a href="catalog-item.html">
@@ -153,7 +153,7 @@
     </article>
     <article>
       <div class="map">
-        <img src="map.png" width="800" height="300" alt="карта">
+        <img src="img/map/mapfooter.png" width="1200" height="430" alt="карта">
       </div>
       <p>
         Адрес главного офиса и офлайн-магазина
@@ -180,7 +180,7 @@
         <li><a href="#">Наши документы</a></li>
         <li><a href="#">Экологические стандарты</a></li>
       </ul>
-      <a href="#"><img src="img/svg-gllacy/logo-htmlacademy.svg" width="109" height="40" alt="HTML-Academy"></a>
+      <a href="#"><img src="img/svg-gllacy/logo-htmlacademy.svg" width="108" height="39" alt="HTML-Academy"></a>
       <p>Сделанно в <a href="https://htmlacademy.ru/">HTML Academy</a> 2019</p>
     </div>
   </footer>
