--- a/catalog.html
+++ b/catalog.html
@@ -22,12 +22,56 @@
       <li><a href="#">Поиск</a></li>
       <li><a href="#">Вход</a></li>
       <li><a href="#">2 товара</a></li>
+      <table>
+        <tr>
+          <td>
+            <form action="#"> 
+              <input type="reset" name="X" value="X">
+            </form>
+          </td>
+          <td>
+            <img src="img/ice-cream/orangejam.png" width="30" height="30" alt="мороженое">
+          </td>
+          <td>
+            Пломбир с апельсиновым джемом
+          </td>
+          <td>
+            1.5кг x 200руб
+          </td>
+          <td>
+            300руб
+          </td>
+        </tr>
+        <tr>
+            <td>
+            <form action="#">
+              <input type="reset" name="X" value="X">
+            </form>
+          </td>
+          <td>
+            <img src="img/ice-cream/whitechoc.png" width="30" height="30" alt="мороженое">
+          </td>
+          <td>
+            Клубничный пломбир с присыпкой из белого шоколада
+          </td>
+          <td>
+            1.5кг x 300руб
+          </td>
+          <td>
+            450руб
+          </td>
+        </tr>
+      </table>
+      <p>Итого: 750руб.</p>
+      <form action="#" method="post">
+      <button type="submit">Оформить заказ</button>
+     </form>
     </ul>
   </header>
   <p>
-        С 10 до 20,еждневно
-        <a href="tel:88124502525">8 812 450-25-25</a>
-      </p>
+    С 10 до 20,еждневно
+    <a href="tel:88124502525">8 812 450-25-25</a>
+  </p>
   <nav>
     <ul>
       <li><a href="index.html">Главная</a></li>
@@ -54,7 +98,7 @@
       <ul>
         <li>
           <a href="catalog-item.html">
-           <img src="img/ice-cream/orangejam.png" width="267" height="267" alt="Мороженное">
+            <img src="img/ice-cream/orangejam.png" width="267" height="267" alt="Мороженное">
           </a>
           <p>
             <a href="catalog-item.html">
@@ -69,15 +113,15 @@
         <li>
           <a href="catalog-item.html">
             <img src="img/ice-cream/coffechoc.png" width="267" height="267" alt="Мороженное">
-          <p>
-            <a href="catalog-item.html">
-              Сливочно-кофейное с кусочками
-              шоколода.
-            </a>
-          </p>
-          <p>
-            <b>380 Р<span>/кг</span></b>
-          </p>
+            <p>
+              <a href="catalog-item.html">
+                Сливочно-кофейное с кусочками
+                шоколода.
+              </a>
+            </p>
+            <p>
+              <b>380 Р<span>/кг</span></b>
+            </p>
         </li>
         <li>
           <a href="catalog-item.html">
@@ -109,7 +153,7 @@
         </li>
         <li>
           <a href="catalog-item.html">
-           <img src="img/ice-cream/ice-cream1/brusjam.png" width="267" height="267" alt="Мороженное">
+            <img src="img/ice-cream/ice-cream1/brusjam.png" width="267" height="267" alt="Мороженное">
           </a>
           <p>
             <a href="catalog-item.html">
@@ -123,7 +167,7 @@
         </li>
         <li>
           <a href="catalog-item.html">
-           <img src="img/ice-cream/ice-cream1/blackberry.png" width="267" height="267" alt="Мороженное">
+            <img src="img/ice-cream/ice-cream1/blackberry.png" width="267" height="267" alt="Мороженное">
           </a>
           <p>
             <a href="catalog-item.html">
@@ -137,7 +181,7 @@
         </li>
         <li>
           <a href="catalog-item.html">
-          <img src="img/ice-cream/ice-cream1/lemonrain.png" width="267" height="267" alt="Мороженное">
+            <img src="img/ice-cream/ice-cream1/lemonrain.png" width="267" height="267" alt="Мороженное">
           </a>
           <p>
             <a href="catalog-item.html">
@@ -151,7 +195,7 @@
         </li>
         <li>
           <a href="catalog-item.html">
-           <img src="img/ice-cream/ice-cream1/chococream.png" width="267" height="267" alt="Мороженное">
+            <img src="img/ice-cream/ice-cream1/chococream.png" width="267" height="267" alt="Мороженное">
           </a>
           <p>
             <a href="catalog-item.html">
@@ -165,7 +209,7 @@
         </li>
         <li>
           <a href="catalog-item.html">
-           <img src="img/ice-cream/ice-cream2/chocvanil.png" width="267" height="267" alt="Мороженное">
+            <img src="img/ice-cream/ice-cream2/chocvanil.png" width="267" height="267" alt="Мороженное">
           </a>
           <p>
             <a href="catalog-item.html">
@@ -179,7 +223,7 @@
         </li>
         <li>
           <a href="catalog-item.html">
-           <img src="img/ice-cream/ice-cream2/mentolsyr.png" width="267" height="267" alt="Мороженное">
+            <img src="img/ice-cream/ice-cream2/mentolsyr.png" width="267" height="267" alt="Мороженное">
           </a>
           <p>
             <a href="catalog-item.html">
@@ -193,7 +237,7 @@
         </li>
         <li>
           <a href="catalog-item.html">
-           <img src="img/ice-cream/ice-cream2/blackchoc.png" width="267" height="267" alt="Мороженное">
+            <img src="img/ice-cream/ice-cream2/blackchoc.png" width="267" height="267" alt="Мороженное">
           </a>
           <p>
             <a href="catalog-item.html">
@@ -207,7 +251,7 @@
         </li>
         <li>
           <a href="catalog-item.html">
-         <img src="img/ice-cream/ice-cream2/slivmint.png" width="267" height="267" alt="Мороженное">
+            <img src="img/ice-cream/ice-cream2/slivmint.png" width="267" height="267" alt="Мороженное">
           </a>
           <p>
             <a href="catalog-item.html">
