--- a/index.html
+++ b/index.html
@@ -14,13 +14,34 @@
     <nav>
       <ul>
         <li><a href="catalog.html">Каталог</a></li>
+        <ul>
+          <li>
+            <h3>Новинки</h3>
+          </li>
+          <li><a href="#">Сливочные</a></li>
+          <li><a href="#">Щербеты</a></li>
+          <li><a href="#">Фруктовый лед</a></li>
+          <li><a href="#">Мелорин</a></li>
+        </ul>
         <li><a href="payment.html">Доставка и оплата</a></li>
         <li><a href="info.html">О Компании</a></li>
       </ul>
     </nav>
     <ul>
       <li><a href="#">Поиск</a></li>
+      <form action="#" method="post">
+        <input type="search" name="searching" aria-label="searching block">
+        <button><img src="loupe.svg">Найти</button>
+      </form>
       <li><a href="#">Вход</a></li>
+      <form action="#" method="post">
+        <input type="text" name="email" placeholder="Электронная почта" required>
+        <input type="password" name="password" placeholder="Пароль" required>
+        <button type="submit">Войти</button>
+        <a href="#">Забыли пароль?</a>
+        <a href="#">Новая регистрация</a>
+        
+      </form>
       <li><a href="#">Пусто</a></li>
     </ul>
   </header>
@@ -38,12 +59,12 @@
           <a href="#">Давайте оба!</a>
         </li>
         <li>
-           <img src="img/ice-cream/slides/chocslide.png" width="1045" height="881" alt="Слайд 2">
+          <img src="img/ice-cream/slides/chocslide.png" width="1045" height="881" alt="Слайд 2">
           <p>Шоколадный пломбир и лимонный сорбет</p>
           <a href="#">Давайте оба!</a>
         </li>
         <li>
-           <img src="img/ice-cream/slides/pomadeslide.png" width="1045" height="881" alt="Слайд 3">
+          <img src="img/ice-cream/slides/pomadeslide.png" width="1045" height="881" alt="Слайд 3">
           <p>пломбир с помадкой и клубничный щербет</p>
           <a href="#">Давайте оба!</a>
         </li>
@@ -68,7 +89,7 @@
       <ul>
         <li>
           <a href="catalog-item.html">
-             <img src="img/ice-cream/orangejam.png" width="267" height="267" alt="Мороженное">
+            <img src="img/ice-cream/orangejam.png" width="267" height="267" alt="Мороженное">
           </a>
           <p>
             <a href="catalog-item.html">
@@ -133,7 +154,6 @@
           Все наше мороженое изготавливается на собственном производсте, с использованием современного оборудования и проверенных временем технологий.
         </li>
         <li>
-          
           Закупка ингредиентов производится только у проверенных фермерских хозяйств и компаний, с которыми нас связывает долговременное сотрудничество.
         </li>
         <li>Для приготовления мороженого используется настоящие сливки и молоко высочайшего качества. Все дополнительные ингредиенты и добавки произведены из натурального,экологически чистого сырья.</li>
@@ -152,7 +172,7 @@
       </form>
     </article>
     <article>
-        <img src="img/map/mapfooter.png" width="1200" height="430" alt="карта">
+      <img src="img/map/mapfooter.png" width="1200" height="430" alt="карта">
       <p>
         Адрес главного офиса и офлайн-магазина
         <b>Ул.Большая Конюшенная
@@ -163,8 +183,18 @@
         (с 10 до 20 ежедневно)</p>
       <a href="">Форма обратной связи</a>
     </article>
+    <section>
+      <h1>Мы обязательно вам ответим!</h2>
+      <form action="#" method="post"> 
+<input type="text" name="name" placeholder="Как вас зовут?">
+<input type="text" name="youremail" placeholder="Ваша почта для ответа?">
+<textarea rows="10" placeholder="Напишите что-нибудь...">
+</textarea>
+ <button type="submit">Отправить</button>       
+      </form>
+    </section>
   </main>
-   <footer>
+  <footer>
     <div>
       <ul>
         <li><a href="twitter.com">Твиттер</a></li>
