--- a/catalog.html
+++ b/catalog.html
@@ -25,8 +25,8 @@
       <table>
         <tr>
           <td>
-            <form action="#"> 
-              <input type="reset" name="X" value="X">
+            <form action="https://echo.htmlacademy.ru/" method="post">
+              <button type="reset" name="X">X</button>
             </form>
           </td>
           <td>
@@ -43,9 +43,9 @@
           </td>
         </tr>
         <tr>
-            <td>
-            <form action="#">
-              <input type="reset" name="X" value="X">
+          <td>
+            <form action="https://echo.htmlacademy.ru/" method="post">
+              <button type="reset" name="X">X</button>
             </form>
           </td>
           <td>
@@ -60,12 +60,14 @@
           <td>
             450руб
           </td>
+        <tr>
+          <td>Итого: 750руб.</td>
+        </tr>
         </tr>
       </table>
-      <p>Итого: 750руб.</p>
-      <form action="#" method="post">
-      <button type="submit">Оформить заказ</button>
-     </form>
+      <form action="https://echo.htmlacademy.ru/" method="post">
+        <button type="submit">Оформить заказ</button>
+      </form>
     </ul>
   </header>
   <p>
