--- a/index.html
+++ b/index.html
@@ -16,9 +16,11 @@
         <li><a href="catalog.html">Каталог</a></li>
         <ul>
           <li>
-            <h3>Новинки</h3>
+            <a href="#">
+              <h3>Новинки</h3>
+            </a>
           </li>
-          <li><a href="#">Сливочные</a></li>
+          <li><a href="gllacy-catalog.psd">Сливочные</a></li>
           <li><a href="#">Щербеты</a></li>
           <li><a href="#">Фруктовый лед</a></li>
           <li><a href="#">Мелорин</a></li>
@@ -29,18 +31,17 @@
     </nav>
     <ul>
       <li><a href="#">Поиск</a></li>
-      <form action="#" method="post">
+      <form action="https://echo.htmlacademy.ru" method="get">
         <input type="search" name="searching" aria-label="searching block">
-        <button><img src="loupe.svg">Найти</button>
+        <button type="submit">Найти</button>
       </form>
       <li><a href="#">Вход</a></li>
-      <form action="#" method="post">
-        <input type="text" name="email" placeholder="Электронная почта" required>
+      <form action="https://echo.htmlacademy.ru/" method="post">
+        <input type="email" name="email" placeholder="Электронная почта" required>
         <input type="password" name="password" placeholder="Пароль" required>
         <button type="submit">Войти</button>
         <a href="#">Забыли пароль?</a>
         <a href="#">Новая регистрация</a>
-        
       </form>
       <li><a href="#">Пусто</a></li>
     </ul>
@@ -166,7 +167,7 @@
     </section>
     <article>
       <p>Подпишитесь на нашу сладкую рассылку и будете всегда в курсе всего самого вкусного,что у нас происходит. Обещаем не спамить и не слать всякой ненужной ерунды. Честно =)</p>
-      <form action="#" method="get">
+      <form action="https://echo.htmlacademy.ru/" method="get">
         <input type="search" placeholder="email@example.com" name="searching">
         <button type="submit">Отправить</button>
       </form>
@@ -184,13 +185,13 @@
       <a href="">Форма обратной связи</a>
     </article>
     <section>
-      <h1>Мы обязательно вам ответим!</h2>
-      <form action="#" method="post"> 
-<input type="text" name="name" placeholder="Как вас зовут?">
-<input type="text" name="youremail" placeholder="Ваша почта для ответа?">
-<textarea rows="10" placeholder="Напишите что-нибудь...">
+      <h2>Мы обязательно вам ответим!</h2>
+      <form action="https://echo.htmlacademy.ru/" https://echo.htmlacademy.ru/ method="post">
+        <input type="text" name="name" placeholder="Как вас зовут?">
+        <input type="text" name="youremail" placeholder="Ваша почта для ответа?">
+        <textarea rows="10" placeholder="Напишите что-нибудь...">
 </textarea>
- <button type="submit">Отправить</button>       
+        <button type="submit">Отправить</button>
       </form>
     </section>
   </main>
