--- a/index.html
+++ b/index.html
@@ -186,7 +186,7 @@
     </article>
     <section>
       <h2>Мы обязательно вам ответим!</h2>
-      <form action="https://echo.htmlacademy.ru/" https://echo.htmlacademy.ru/ method="post">
+      <form action="https://echo.htmlacademy.ru/" method="post">
         <input type="text" name="name" placeholder="Как вас зовут?">
         <input type="text" name="youremail" placeholder="Ваша почта для ответа?">
         <textarea rows="10" placeholder="Напишите что-нибудь...">
