--- a/index.html
+++ b/index.html
@@ -182,7 +182,9 @@
       <p>Для заказов по телефону:
         <a href="tel:88124502525">8 812 450-25-25</a>
         (с 10 до 20 ежедневно)</p>
-      <a href="">Форма обратной связи</a>
+        <form action="https://echo.htmlacademy.ru/" method="post">
+      <button type="submit">Форма обратной связи</button>
+      </form>
     </article>
     <section>
       <h2>Мы обязательно вам ответим!</h2>
