--- a/index.html
+++ b/index.html
@@ -17,10 +17,10 @@
         <ul>
           <li>
             <a href="#">
-              <h3>Новинки</h3>
+              Новинки
             </a>
           </li>
-          <li><a href="gllacy-catalog.psd">Сливочные</a></li>
+          <li><a href="catalog.html">Сливочные</a></li>
           <li><a href="#">Щербеты</a></li>
           <li><a href="#">Фруктовый лед</a></li>
           <li><a href="#">Мелорин</a></li>
@@ -182,15 +182,15 @@
       <p>Для заказов по телефону:
         <a href="tel:88124502525">8 812 450-25-25</a>
         (с 10 до 20 ежедневно)</p>
-        <form action="https://echo.htmlacademy.ru/" method="post">
-      <button type="submit">Форма обратной связи</button>
+      <form action="https://echo.htmlacademy.ru/" method="post">
+        <button type="submit">Форма обратной связи</button>
       </form>
     </article>
     <section>
       <h2>Мы обязательно вам ответим!</h2>
       <form action="https://echo.htmlacademy.ru/" method="post">
         <input type="text" name="name" placeholder="Как вас зовут?">
-        <input type="text" name="youremail" placeholder="Ваша почта для ответа?">
+        <input type="email" name="youremail" placeholder="Ваша почта для ответа?">
         <textarea rows="10" placeholder="Напишите что-нибудь...">
 </textarea>
         <button type="submit">Отправить</button>
