--- a/index.html
+++ b/index.html
@@ -4,22 +4,20 @@
 <head>
   <meta charset="utf-8">
   <title>HTML Academy: Глейси</title>
+  <link rel="stylesheet" type="text/css" href="css/style.css">
+  <link rel="stylesheet" type="text/css" href="css/normalize.css">
 </head>
 
 <body>
   <header>
-    <a href="#">
+    <a>
       <img src="img/svg-gllacy/logo.svg" width="154" height="64" alt="Логотип магазина Glacy">
     </a>
     <nav>
       <ul>
         <li><a href="catalog.html">Каталог</a></li>
         <ul>
-          <li>
-            <a href="#">
-              Новинки
-            </a>
-          </li>
+          <li><a href="#">Новинки</a></li>
           <li><a href="catalog.html">Сливочные</a></li>
           <li><a href="#">Щербеты</a></li>
           <li><a href="#">Фруктовый лед</a></li>
@@ -89,11 +87,11 @@
     <section>
       <ul>
         <li>
-          <a href="catalog-item.html">
+          <a href="#">
             <img src="img/ice-cream/orangejam.png" width="267" height="267" alt="Мороженное">
           </a>
           <p>
-            <a href="catalog-item.html">
+            <a href="#">
               Сливочное с апельсиновым
               джемом и цитрусовой стружкой.
             </a>
@@ -103,11 +101,11 @@
           </p>
         </li>
         <li>
-          <a href="catalog-item.html">
+          <a href="#">
             <img src="img/ice-cream/coffechoc.png" width="267" height="267" alt="Мороженное">
           </a>
           <p>
-            <a href="catalog-item.html">
+            <a href="#">
               Сливочно-кофейное с кусочками<br>
               шоколода.
             </a>
@@ -117,11 +115,11 @@
           </p>
         </li>
         <li>
-          <a href="catalog-item.html">
+          <a href="#">
             <img src="img/ice-cream/whitechoc.png" width="267" height="267" alt="Мороженное">
           </a>
           <p>
-            <a href="catalog-item.html">
+            <a href="#">
               Сливочно-клубничное с
               присыпкой из белого шоколада.
             </a>
@@ -131,11 +129,11 @@
           </p>
         </li>
         <li>
-          <a href="catalog-item.html">
+          <a href="#">
             <img src="img/ice-cream/carcream.png" width="267" height="267" alt="Мороженное">
           </a>
           <p>
-            <a href="catalog-item.html">
+            <a href="#">
               Сливочный крем-брюле с
               карамельной подливкой.
             </a>
@@ -168,7 +166,7 @@
     <article>
       <p>Подпишитесь на нашу сладкую рассылку и будете всегда в курсе всего самого вкусного,что у нас происходит. Обещаем не спамить и не слать всякой ненужной ерунды. Честно =)</p>
       <form action="https://echo.htmlacademy.ru/" method="get">
-        <input type="search" placeholder="email@example.com" name="searching">
+        <input type="email" placeholder="email@example.com" name="searching">
         <button type="submit">Отправить</button>
       </form>
     </article>
@@ -200,10 +198,10 @@
   <footer>
     <div>
       <ul>
-        <li><a href="twitter.com">Твиттер</a></li>
-        <li><a href="instagram.com">Инстаграм</a></li>
-        <li><a href="facebook.com">Фэйсбук</a></li>
-        <li><a href="vkontakte.ru">Вконтакте</a></li>
+        <li><a target="blank" href="twitter.com">Твиттер</a></li>
+        <li><a target="blank" href="instagram.com">Инстаграм</a></li>
+        <li><a target="blank" href="facebook.com">Фэйсбук</a></li>
+        <li><a target="blank" href="vkontakte.ru">Вконтакте</a></li>
       </ul>
       <ul>
         <li><a href="#">Для поставщиков</a></li>
@@ -212,7 +210,7 @@
         <li><a href="#">Экологические стандарты</a></li>
       </ul>
       <a href="#"><img src="img/svg-gllacy/logo-htmlacademy.svg" width="108" height="39" alt="HTML-Academy"></a>
-      <p>Сделанно в <a href="https://htmlacademy.ru/">HTML Academy</a> 2019</p>
+      <p>Сделанно в <a target="blank" href="https://htmlacademy.ru/">HTML Academy</a> 2019</p>
     </div>
   </footer>
 </body>
